--- a/init.yaml
+++ b/init.yaml
@@ -6,10 +6,10 @@ R1:
   - sleep:  10
   - conf t
   - interface fa1/0
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
   - interface fa1/1
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
 R2:
   - ip: 192.168.1.202
@@ -17,13 +17,13 @@ R2:
   - password: cisco
   - sleep:  10
   - interface fa1/0
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
   - interface fa1/1
   - ip ospf cost 1
   - no sh
   - interface fa1/2
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
 R3:
   - ip: 192.168.1.203
@@ -32,10 +32,10 @@ R3:
   - sleep:  10
   - conf t
   - interface fa1/1
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
   - interface fa1/2
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
 R4:
   - ip: 192.168.1.204
@@ -44,13 +44,13 @@ R4:
   - sleep:  10
   - conf t
   - interface fa1/1
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
   - interface fa1/2
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
   - interface fa1/0
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
 R5:
   - ip: 192.168.1.205
@@ -59,8 +59,8 @@ R5:
   - sleep:  10
   - conf t
   - interface fa1/0
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
   - interface fa1/2
-  - ip ospf cost 1
+  - no ip ospf cost
   - no sh
