--- a/offlinelab/case2.yaml
+++ b/offlinelab/case2.yaml
@@ -3,7 +3,8 @@ R3:
   - ip: 192.168.0.203
   - login: admin
   - password: cisco
-  - sleep:  0
+  - enablepassword: cisco
+  - sleep:  10
   - conf t
   - interface e0/0
   - sh
