--- a/offlinelab/INTERNET-cmd.yaml
+++ b/offlinelab/INTERNET-cmd.yaml
@@ -1,29 +1,11 @@
 # YAML
-IOU3:
+INTERNET:
   - device: cisco
-  - ip: 192.168.0.203
+  - ip: 192.168.0.200
   - login: admin
   - password: cisco
   - enablepassword: 
   - sleep:  2
-  - sh ip nhrp
-  - sh ip nhrp detail
-  - sh ip nhrp nhs
-  - sh ip nhrp multicast
-  - sh dmvpn
-  - sh dmvpn detail
-  - sh dmvpn static
-  - sh tunnel endpoint tunnel 0
-  - sh crypto isakmp policy
-  - sh crypto isakmp sa
-  - sh crypto isakmp sa detail
-  - sh crypto ipsec sa
-  - sh ip eigrp neighbors
-  - sh ip eigrp neighbors detail
-  - sh ip eigrp interfaces
-  - sh ip eigrp topology
-  - sh ip eigrp traffic
-  - sh key chain
   - sh ip cef
   - sh ip cef adjacency
   - sh ip protocol
